# operating_system

./: Cargo.toml  README.md  todo.txt
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
