[package]
name = "test_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# this shouldn't be needed anymore because I specify it in the target file
# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
bootloader = "0.9.8"
