[package]
name = "test_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# this shouldn't be needed anymore because I specify it in the target file
# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

# I am running this tests as no harness tests because when one fails
# the next ones can't run, because they should panic, so there is
# no point in having a test_runner
[[test]]
name = "should_panic"
harness = false

# This is to exit qemu automatically
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies]
x86_64 = "0.13.2"
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]